<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white_30"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editTextTextMultiLine8"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:background="@color/Wheat"
        android:contentDescription="@string/data"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:labelFor="@id/calendarView10"
        android:textColor="@color/Purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonAdd"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickAdd"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/buttonReview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickReview"
            android:text="@string/review"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/months_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickReset"
            android:text="@string/reset"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/buttonData"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickReviewData"
            android:text="@string/data"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/months_container3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editTextInput"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickReviewMonth"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonData" />
    </LinearLayout>


    <CalendarView
        android:id="@+id/calendarView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:background="@color/white"

        android:backgroundTint="@color/white_30"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:drawingCacheQuality="auto"
        android:textDirection="locale"
        android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine8"
        app:layout_constraintVertical_bias="0.971" />

</LinearLayout>