<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/Wheat"
    android:backgroundTintMode="multiply"
    android:gravity="left"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/year_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <LinearLayout
        android:id="@+id/days_week"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/monDay"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/monday" />

        <TextView
            android:id="@+id/tuesDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/wednesDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/thursDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/friDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/saturDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/sunDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="537dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numweek_1"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/numweek_2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/numweek_3"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/numweek_4"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/numweek_5"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/numweek_6"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="TextView" />
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:padding="0dp"
            app:columnCount="7"
            app:columnOrderPreserved="true"
            app:rowCount="6">

            <LinearLayout
                android:id="@+id/calendar_11"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#DEB273"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_column="0"
                app:layout_row="0">

                <TextView
                    android:id="@+id/day_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="31"
                    android:textColor="@color/Purple2"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/event_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="@color/Purple2"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mybutton5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#DEB273"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_column="0"
                app:layout_row="2">

                <TextView
                    android:id="@+id/leftButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="31"
                    android:textColor="@color/Purple2"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/rightButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="@color/Purple2"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"

                android:layout_marginTop="-5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="0"
                app:layout_row="4"
                tools:ignore="GridLayout" />

            <Button
                android:id="@+id/button10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"

                android:layout_marginTop="-5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="0"
                app:layout_row="3"
                tools:ignore="GridLayout" />

            <Button
                android:id="@+id/button13"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"

                android:layout_marginTop="-5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="0"
                app:layout_row="5"
                tools:ignore="GridLayout" />

            <LinearLayout
                android:id="@+id/mybutton4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:background="#DEB273"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_column="0"
                app:layout_row="1">

                <TextView
                    android:id="@+id/leftButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="31"
                    android:textColor="@color/Purple2"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/rightButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="@color/Purple2"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calendar_12"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#DEB273"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_column="1"
                app:layout_row="0">

                <TextView
                    android:id="@+id/day_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="31"
                    android:textColor="@color/Purple2"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/event_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="@color/Purple2"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="2"
                tools:ignore="GridLayout" />

            <Button
                android:id="@+id/button6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="3"
                app:layout_row="0"
                tools:ignore="GridLayout" />

            <Button
                android:id="@+id/button7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#8BC34A"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/button_text"
                android:textSize="30dp"
                app:cornerRadius="0dp"
                app:iconSize="30dp"
                app:layout_column="4"
                app:layout_row="0"
                tools:ignore="GridLayout" />

            <LinearLayout
                android:id="@+id/mybutton3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:background="#8E6427"

                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:layout_column="5"
                app:layout_row="0">

                <TextView
                    android:id="@+id/leftButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="31"
                    android:textColor="#ffffff"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/rightButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mybutton2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#8E6427"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_column="6"
                app:layout_row="0">

                <TextView
                    android:id="@+id/leftButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="31"
                    android:textColor="#ffffff"
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/rightButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="event"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Button" />

</LinearLayout>